src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Draup_Token__c</fullName>
        <label>Draup Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <defaultValue>TODAY() + 30</defaultValue>
        <label>ExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isSuperUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuperUser</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>